added some hidden class

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <button type="button" class="btn btn-outline-warning sign-up-btn">Sign-Up</button>
             <button type="button" class="btn btn-outline-warning sign-out-btn">Sign-Out</button>
             <button type="button" class="btn btn-outline-warning chg-pass-btn">Change-Password</button>
-            <button type="button" class="btn btn-outline-warning get-all-image-btn">Show-All</button>
-            <button type="button" class="btn btn-outline-warning get-image-by-id-btn">Get-ID</button>
+            <button type="button" class="btn btn-outline-warning get-all-item-btn">Show-All</button>
+            <!-- <button type="button" class="btn btn-outline-warning get-image-by-id-btn">Get-ID</button> -->
             <!-- <button type="button" class="btn btn-outline-warning delete-image-btn">Delete</button> -->
             <span class="text-muted"></span>
 
