added proper naming schemes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <form action="" class="upload-area" data-id='store.user.id'>
           <h2 class="disclaimer"></h2>
           <input class='location' type="text" name="item[title]" placeholder="Title">
-          <input class='location' type="text" name="item[description]" placeholder="Description">
+          <input class='location' type="text" name="item[text]" placeholder="Description">
           <input class='location add-btn submit' type="submit" value="Add">
         </form>
         <div class="upload-message-box"></div>
