styling, added card like display for each item list

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 
      <div class="upload-section hidden">
         <form action="" class="upload-area" data-id='store.user.id'>
-          <h2 class="disclaimer"></h2>
           <input class='location' type="text" name="item[title]" placeholder="Title">
           <input class='location' type="text" name="item[text]" placeholder="Description">
           <input class='location add-btn submit' type="submit" value="Add">
+          <h2 class="disclaimer">What is your bucket list? Give it a title and short description.</h2>
         </form>
         <div class="upload-message-box"></div>
       </div>
