--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
       <!-- Do not add `link` tags-->
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+      <link rel="icon" type="image/png" sizes="32x32" href="paint-bucket.png">
 
       <!-- Do not add `script` tags-->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
@@ -15,7 +16,7 @@
       <div class="pos-f-t">
         <div class="collapse" id="navbarToggleExternalContent">
           <div class=" p-4 user-panel">
-            <h5 class="text-white h4 user-panel-name"><span class="user-name"></span>User Panel</h5>
+            <h5 class="text-white h4 user-panel-name"><span class="user-name"></span></h5>
 
             <button type="button" class="btn btn-outline-warning sign-in-btn">Sign-In</button>
             <button type="button" class="btn btn-outline-warning sign-up-btn">Sign-Up</button>
