--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           <input class='location' type="text" name="item[text]" placeholder="Description">
           <input class='location add-btn submit' type="submit" value="Add">
           <h2 class="disclaimer">What is your bucket list? Give it a title and short description.</h2>
+          <span class="upload-message-box"></span>
         </form>
-        <div class="upload-message-box"></div>
       </div>
       <hr>
 
