Fixed minor typo.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <input class='location' type="text" name="item[title]" placeholder="Title">
           <input class='location' type="text" name="item[text]" placeholder="Description">
           <input class='location add-btn submit' type="submit" value="Add">
-          <h2 class="disclaimer">What is in your bucket list? Give it a title and short description.</h2>
+          <h2 class="disclaimer">What is on your bucket list? Give it a title and a short description.</h2>
           <span class="upload-message-box"></span>
         </form>
       </div>
