added a background image
@KwesiAtherley

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
       </div>
       <hr>
 
+      <!-- <div class='logo'>
+        <img src="public/logo_transparent.png" alt="" class="bucket-logo">
+      </div> -->
+
       <div class="item-wall"></div>
 
     </body>
