added new password input field length requirement

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <form class="change-password-form input-field" id="change-password-form" >
                <legend>Change-Password</legend>
                 <input class='input-field old-Pass style' type="password" name="passwords[old]" placeholder="Old Password">
-                <input class='input-field new-Pass style' type="password" name="passwords[new]" placeholder="New Password">
+                <input class='input-field new-Pass style' required minlength='6' type="password" name="passwords[new]" placeholder="New Password">
                 <input class='form-btn' type="submit" value="Change">
               </form>
             </div>
