reimplemented background image

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
       </div>
       <hr>
 
-      <!-- <div class='logo'>
+      <div class='logo'>
         <img src="public/logo_transparent.png" alt="" class="bucket-logo">
-      </div> -->
+      </div>
 
       <div class="item-wall"></div>
 
