--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
       <!-- Do not add `link` tags-->
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-      <link rel="icon" type="image/png" sizes="32x32" href="./img/paint-bucket.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="public/bucket.png">
 
       <!-- Do not add `script` tags-->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
